# ConvolutionalNNforCIFAR

./: CMakeLists.txt  README.md  convolution.cpp  loader_data.cpp  loader_data.h  main.cpp  utilities.h
